--- a/FirebaseCloudMessaging/app/src/main/AndroidManifest.xml
+++ b/FirebaseCloudMessaging/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".utilities.MyFirebaseMessagingService">
+        <service android:name="com.doesnothaveadomain.firebase_cloud_messaging.utilities.MyFirebaseMessagingService"
+                 android:stopWithTask="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
