--- a/FirebaseCloudMessaging/app/src/main/AndroidManifest.xml
+++ b/FirebaseCloudMessaging/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
           package="com.doesnothaveadomain.firebase_cloud_messaging">
 
     <application
+        android:name="com.doesnothaveadomain.firebase_cloud_messaging.ThisApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <service android:name="com.doesnothaveadomain.firebase_cloud_messaging.utilities.MyFirebaseMessagingService"
                  android:stopWithTask="false">
             <intent-filter>
@@ -16,6 +18,8 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
+        <service android:name="com.doesnothaveadomain.firebase_cloud_messaging.utilities.StickySevice" />
 
         <activity android:name=".FirebaseActivity" />
         <activity android:name=".LoginActivity">
